# GiGe_VisionStreamingProtocol

./: CMakeLists.txt  LICENSE
matlab/: closeVideo.m  gvsp_config.mat  parse_gvsp.m  showImage.m
source/include/gvsp/: gvsp_config.hpp  parse_gvsp.hpp
source/src/gvsp/: parse_gvsp.cpp
